--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,6 @@
         <li><%= link_to 'Masuk', login_path %></li>
       <% end %>
     </ul>
-    <button type="button" class="button" data-toggle="offCanvas">Open Menu</button>
+    <button class="off-canvas-toggle" data-toggle="offCanvas">.</button>
   </div>
 </div>
