--- a/app/views/layouts/masthead.html.erb
+++ b/app/views/layouts/masthead.html.erb
@@ -9,10 +9,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= render 'layouts/flash' %>
   <%= render 'layouts/header' %>
-  <%= yield %>
-  <%= render 'layouts/footer' %>
+  <div class="off-canvas-wrapper">
+    <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
+      <div class="off-canvas position-left" id="offCanvas" data-off-canvas>
+        <%= render 'layouts/offcanvas' %>
+      </div>
+      <div class="off-canvas-content" data-off-canvas-content>
+        <%= render 'layouts/flash' %>
+        <%= yield %>
+        <%= render 'layouts/footer' %>
+      </div>
+    </div>
+  </div>
+  
   <%= javascript_include_tag 'masthead', 'data-turbolinks-track' => true %>
 </body>
 </html>
