--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -22,7 +22,8 @@
 
   <div class="index-report">
     <%= render partial: 'story', collection: @stories.order(created_at: 'desc') %>
-    <ul class="pagination text-center" role="navigation" aria-label="Pagination">
+    <%= will_paginate @stories %>
+    <!-- <ul class="pagination text-center" role="navigation" aria-label="Pagination">
       <li class="pagination-previous disabled">Previous <span class="show-for-sr">page</span></li>
       <li class="current"><span class="show-for-sr">You're on page</span> 1</li>
       <li><a href="#" aria-label="Page 2">2</a></li>
@@ -32,6 +33,6 @@
       <li><a href="#" aria-label="Page 12">12</a></li>
       <li><a href="#" aria-label="Page 13">13</a></li>
       <li class="pagination-next"><a href="#" aria-label="Next page">Next <span class="show-for-sr">page</span></a></li>
-    </ul>
+    </ul> -->
   </div>
 </div>
