Modify share button color and seed data province and city from csv files

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -352,10 +352,10 @@ button.off-canvas-toggle{
 .social-share-button-twitter{
     width: 26px;
     height: 23px;
-    background: url('S-TWEET.svg') center no-repeat
+    background: url('S-TWEET.svg') center no-repeat;
 }
 .social-share-button-facebook{
     width: 26px;
     height: 23px;
-    background: url('S-FB.svg') center no-repeat
+    background: url('S-FB.svg') center no-repeat;
 }
