--- a/app/views/mockups/index.html.erb
+++ b/app/views/mockups/index.html.erb
@@ -2,24 +2,70 @@
   <div id="container-map"></div>
   <div class="masthead">
     <div class="container">
-      <h4 class="masthead-title kilo">Nothing was changed save for that</h4>
+      <h4 class="masthead-title kilo"><b>Jadilah bagian dari perubahan !</b></h4>
       <a class="large button float-right" href="#">Laporkan !</a>
+    </div>
+  </div>
+  <div class="process">
+    <div class="row">
+      <div class="columns medium-4 small-12">
+        <img class="thumbnail" src="<%= asset_path "img-dummy.jpeg" %>" alt="Photo of Uranus.">
+        <div class="process-title"><h4>Pertama</h4><span class="stripe"></span></div>
+        <div class="process-desc"><p>asdsad asdasd aasd asda asd ads asdas  asdasdasdasd asdasd  asdadss asdsad asdasd aasd asda asd ads asdas  asdasdasdasd asdasd  asdadss</p></div>
+      </div>
+      <div class="columns medium-4 small-12">
+        <img class="thumbnail" src="<%= asset_path "img-dummy.jpeg" %>" alt="Photo of Uranus.">
+        <div class="process-title"><h4>Pertama</h4><span class="stripe"></span></div>
+        <div class="process-desc"><p>asdsad asdasd aasd asda asd ads asdas  asdasdasdasd asdasd  asdadss asdsad asdasd aasd asda asd ads asdas  asdasdasdasd asdasd  asdadss</p></div>
+      </div>
+      <div class="columns medium-4 small-12">
+        <img class="thumbnail" src="<%= asset_path "img-dummy.jpeg" %>" alt="Photo of Uranus.">
+        <div class="process-title"><h4>Pertama</h4><span class="stripe"></span></div>
+        <div class="process-desc"><p>asdsad asdasd aasd asda asd ads asdas  asdasdasdasd asdasd  asdadss asdsad asdasd aasd asda asd ads asdas  asdasdasdasd asdasd  asdadss</p></div>
+      </div>
     </div>
   </div>
   <div class="container headline">
     <div class="row">
       <div class="columns medium-6 small-12">
         <h3>Latest Stories</h3>
-        <ul class="latest-story">
-          <li><a href="#">This is a short description for one of the three columns on our homepage.</a></li>
-          <li><a href="#">This error happens the second time Highcharts or Highstock is loaded in the same page</a></li>
-          <li><a href="#">StockChart in combination, you only need</a></li>
-          <li><a href="#">load the highstock.js</a></li>
-          <li><a href="#">Highcharts or Highstock is loaded in the same page, so the Highcharts namespace is already defined. Keep in mind that the Highcharts.</a></li>
-        </ul>
+        <span class="stripe"></span>
+        <!-- start repeating -->
+        <div class="row">
+          <div class="columns small-6 text-center">
+            <h5>asdasdasd asda</h5>
+            <p class="subheader">asd asdhgajsdg asdads</p>
+          </div>
+          <div class="columns small-6 border-left text-center">
+            <h4>Rp. 123412</h4>
+            <p class="subheader">aksdg askdasd</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="columns small-6 text-center">
+            <h5>asdasdasd asda</h5>
+            <p class="subheader">asd asdhgajsdg asdads</p>
+          </div>
+          <div class="columns small-6 border-left text-center">
+            <h4>Rp. 123412</h4>
+            <p class="subheader">aksdg askdasd</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="columns small-6 text-center">
+            <h5>asdasdasd asda</h5>
+            <p class="subheader">asd asdhgajsdg asdads</p>
+          </div>
+          <div class="columns small-6 border-left text-center">
+            <h4>Rp. 123412</h4>
+            <p class="subheader">aksdg askdasd</p>
+          </div>
+        </div>
+        <!-- end repeating -->
       </div>
-      <div class="columns medium-6 small-12 border-left-double">
+      <div class="columns medium-6 small-12">
         <h3>Statistics</h3>
+        <span class="stripe"></span>
         <div id="container-chart" style="width:100%; height:400px;"></div>
         </br>
         <a class="button medium small-3 float-center">Learn More »</a>
