--- a/app/views/mockups/login.html.erb
+++ b/app/views/mockups/login.html.erb
@@ -12,7 +12,7 @@
         <input type="checkbox">
         <label>Remember me · <a href="#">Forgot password?</a></label>
       </div>
-      <button type="submit" class="button--xsm button--pill">Login</button>
+      <button type="submit" class="button--xsm button--pill button">Login</button>
     </form>
     <hr>
     <p>New to Stop Suap? <a href="#">Sign up here!</a></p>
