--- a/app/views/settings/passwords/show.html.erb
+++ b/app/views/settings/passwords/show.html.erb
@@ -1,23 +1,21 @@
-<div row>
-  <div column="4 +4">
-    <h3>Change your password</h3>
-    <%= form_for @user, url: change_password_path, method: :post do |f| %>
-      <div class="form-field">
-        <%= f.label :current_password %>
-        <%= f.password_field :current_password %>
-      </div>
+<div class="row">
+  <div class="columns medium-4 medium-offset-4">
+    <div class="login">
+      <h3>Ganti Password</h3>
+      <%= form_for @user, url: change_password_path, method: :post do |f| %>
+        <div class="form-field">
+          <%= f.password_field :current_password, placeholder: 'Password', autofocus: true %>
+        </div>
 
-      <div class="form-field">
-        <%= f.label :new_password %>
-        <%= f.password_field :new_password %>
-      </div>
+        <div class="form-field">
+          <%= f.password_field :new_password, placeholder: 'Password Baru', autofocus: true %>
+        </div>
 
-      <div class="form-field">
-        <%= f.label :new_password_confirmation %>
-        <%= f.password_field :new_password_confirmation %>
-      </div>
+        <div class="form-field">
+          <%= f.password_field :new_password_confirmation, placeholder: 'Konfirmasi Password', autofocus: true %>
+        </div>
 
-      <%= f.submit 'Change password!' %>
-    <% end %>
+        <%= f.submit 'Change password!', class: 'button-form large float-center' %>
+      <% end %>
   </div>
 </div>
