--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -62,5 +62,5 @@
         </div>
       </section>
     <% end %>
-    <%= f.submit 'Submit', class: 'button' %>
+    <%= f.submit 'Submit', class: 'button-form' %>
 <% end %>
