--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,29 +1,27 @@
-<div row>
-  <div column="6 +3">
-    <h3>Contact Us</h3>
-    <%= form_for @contact do |f| %>
-      <fieldset>
-        <div class="form-field">
-          <%= f.label :name %>
-          <%= f.text_field :name %>
-        </div>
+<div class="row">
+  <div class="columns medium-4 medium-offset-4">
+    <div class="login">
+      <h3>Hubungi Kami</h3>
+      <%= form_for @contact do |f| %>
+        <fieldset>
+          <div class="form-field">
+            <%= f.text_field :name, placeholder: 'Nama', autofocus: true  %>
+          </div>
 
-        <div class="form-field">
-          <%= f.label :email %>
-          <%= f.email_field :email %>
-        </div>
+          <div class="form-field">
+            <%= f.email_field :email, placeholder: 'Email', autofocus: true  %>
+          </div>
 
-        <div class="form-field">
-          <%= f.label :subject %>
-          <%= f.text_field :subject %>
-        </div>
+          <div class="form-field">
+            <%= f.text_field :subject, placeholder: 'subject', autofocus: true  %>
+          </div>
 
-        <div class="form-field">
-          <%= f.label :message %>
-          <%= f.text_area :message %>
-        </div>
-      </fieldset>
-      <%= f.submit "contact us" %>
-    <% end %>
+          <div class="form-field">
+            <%= f.text_area :message, rows: 10, placeholder: 'Pesan', autofocus: true  %>
+          </div>
+        </fieldset>
+        <%= f.submit "Kirim", class: 'button-form large float-center' %>
+      <% end %>
+    </div>
   </div>
 </div>
