--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
-<footer class="site-footer">
+<footer class="site-footer" id = "footer">
   <div class="row">
     <p class="columns small-6">Copyright &copy; 2015 by Stop Suap</p>
     <ul class="right">
       <li><a href="#">About</a></li>
       <li><a href="#">Privacy</a></li>
       <li><a href="#">Terms</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><%= link_to "Contact Us", new_contact_path, class: "#{active_class(new_contact_path)}" %></li>
     </ul>
   </div>
 </footer>
