--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,8 +4,11 @@
       <h3>Join Stop Suap today!</h3>
       <%= form_for @user, url: signup_path do |f| %>
         <div class="form-field">
-          <%= f.text_field :email, class: 'input--large', placeholder: 'Email', autofocus: true %>
+          <%= f.text_field :name, class: 'input--large', placeholder: 'Name', autofocus: true %>
         </div>
+        <div class="form-field">
+          <%= f.text_field :email, class: 'input--large', placeholder: 'Email', autofocus: true %>
+        </div> 
 
         <div class="form-field">
           <%= f.password_field :password, class: 'input--large', placeholder: 'Password' %>
@@ -15,10 +18,10 @@
           <%= f.password_field :password_confirmation, class: 'input--large', placeholder: 'Password confirmation' %>
         </div>
 
-        <%= f.submit 'Sign Up', class: 'button large float-center' %>
+        <%= f.submit 'Sign Up', class: 'button-form large float-center' %>
       <% end %>
       <small>
-        By signing up, you agree to the Terms of Service and Privacy Policy,
+        **By signing up, you agree to the Terms of Service and Privacy Policy,
         including Cookie Use.
       </small>
     </div>
