--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,12 @@
 <div class="top-bar">
   <div class="top-bar-left">
-    <div data-no-turbolink class="menu-text"><h3><%= link_to 'STOP SUAP', root_path %></h3></div>
+    <div data-no-turbolink class="menu-text">
+      <h3>
+        <%= link_to root_path do %>
+          <strong>STOP</strong> SUAP
+        <% end %>
+      </h3>
+  </div>
   </div>
   <div class="top-bar-right">
     <ul class="menu">
