--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,10 +2,10 @@
   <div class="row">
     <p class="columns small-6">Copyright &copy; 2015 by Stop Suap</p>
     <ul class="right">
-      <li><a href="#">About</a></li>
-      <li><a href="#">Privacy</a></li>
-      <li><a href="#">Terms</a></li>
-      <li><%= link_to "Contact Us", new_contact_path, class: "#{active_class(new_contact_path)}" %></li>
+      <li><a href="#">Tentang</a></li>
+      <li><a href="#">Aturan</a></li>
+      <li><a href="#">TOR</a></li>
+      <li><%= link_to "Kontak Kami", new_contact_path, class: "#{active_class(new_contact_path)}" %></li>
     </ul>
   </div>
 </footer>
