--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,7 +1,10 @@
+<div class="border-bottom-double content-header">
+  <h3> Bagikan Ceritamu </h3>
+  <div class="subheader"> laporkan kasus suap </div>
+</div>
 <div class="container">
   <div class="row">
-    <div class="columns medium-8 medium-offset-2 create-story">
-      <h3 class="border-bottom-double">Bagikan Ceritamu</h3>
+    <div class="columns medium-10 medium-offset-1 create-story">
       <%= render 'form' %>
     </div>
   </div>
