--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,6 +2,6 @@
   <p class="comment-label">
     <%= comment.body %>
   </p>
-  <small>Commented by <%= comment.user.email %> on <%= comment.created_at.strftime('%e %B, %Y') %></small>
+  <small>Oleh <%= comment.user.email %> <span style = "color: #B80f0f;"> <%= time_ago_in_words(comment.created_at) %> </span>yang lalu</small>
 </div>
 <hr>
