--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,38 +1,38 @@
-<div class="container">
-  <div class="index-control">
-    <div class="row">
-      <div class="columns medium-5">
-        <%= search_form_for @search do |f| %>
-          <%= f.search_field :title_or_content_or_category_name_or_location_city_name_or_location_province_name_cont %>
-        <% end %>
-      </div>
+<div class="index-control">
+  <div class="row">
+    <div class="columns medium-6">
+      <%= search_form_for @search do |f| %>
+        <%= f.search_field :title_or_content_or_category_name_or_location_city_name_or_location_province_name_cont %>
+      <% end %>
+    </div>
 
-      <div class="columns medium-3 ">
-        <%= select_tag 'category',
-          options_from_collection_for_select(Category.all, 'id', 'name'), prompt: 'Please select' %>
-      </div>
-
-      <div class="columns medium-3 float-left">
-        <%= select_tag 'province',
-          options_from_collection_for_select(Province.all, 'id', 'name'), prompt: 'Please select' %>
-      </div>
+    <div class="columns medium-6 ">
+      <div class="row">
+        <div class="columns medium-6 ">
+          <%= select_tag 'province',
+            options_from_collection_for_select(Province.all, 'id', 'name'), prompt: "Propinsi" %>
+        </div>
+        <div class="columns medium-6 float-left">
+          <%= select_tag 'category',
+            options_from_collection_for_select(Category.all, 'id', 'name'), prompt: "Kategori" %>
+        </div>
       </div>
     </div>
   </div>
+</div>
 
-  <div class="index-report">
-    <%= render partial: 'story', collection: @stories.order(created_at: 'desc') %>
-    <%= will_paginate @stories %>
-    <!-- <ul class="pagination text-center" role="navigation" aria-label="Pagination">
-      <li class="pagination-previous disabled">Previous <span class="show-for-sr">page</span></li>
-      <li class="current"><span class="show-for-sr">You're on page</span> 1</li>
-      <li><a href="#" aria-label="Page 2">2</a></li>
-      <li><a href="#" aria-label="Page 3">3</a></li>
-      <li><a href="#" aria-label="Page 4">4</a></li>
-      <li class="ellipsis" aria-hidden="true"></li>
-      <li><a href="#" aria-label="Page 12">12</a></li>
-      <li><a href="#" aria-label="Page 13">13</a></li>
-      <li class="pagination-next"><a href="#" aria-label="Next page">Next <span class="show-for-sr">page</span></a></li>
-    </ul> -->
-  </div>
+<div class="index-report">
+  <%= render partial: 'story', collection: @stories.order(created_at: 'desc') %>
+  <%= will_paginate @stories %>
+  <!-- <ul class="pagination text-center" role="navigation" aria-label="Pagination">
+    <li class="pagination-previous disabled">Previous <span class="show-for-sr">page</span></li>
+    <li class="current"><span class="show-for-sr">You're on page</span> 1</li>
+    <li><a href="#" aria-label="Page 2">2</a></li>
+    <li><a href="#" aria-label="Page 3">3</a></li>
+    <li><a href="#" aria-label="Page 4">4</a></li>
+    <li class="ellipsis" aria-hidden="true"></li>
+    <li><a href="#" aria-label="Page 12">12</a></li>
+    <li><a href="#" aria-label="Page 13">13</a></li>
+    <li class="pagination-next"><a href="#" aria-label="Next page">Next <span class="show-for-sr">page</span></a></li>
+  </ul> -->
 </div>
