--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -56,7 +56,7 @@
         </div>
 
         <div class="form-field">
-          <%= f.label :email, 'Alamat surel anda' %>
+          <%= f.label :email, 'Alamat email anda' %>
           <%= f.text_field :email %>
         </div>
       </section>
