--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -80,6 +80,12 @@ a {
 .active{
   color: #fff !important;
 }
+#lapor.active{
+  color: #B80f0f !important;
+}
+.aditional-margin-bottom{
+  margin-bottom: 5rem !important;
+}
 
 // Site Header
 
@@ -255,7 +261,9 @@ button.off-canvas-toggle{
 // End Masthead
 
 // Site Content
-
+.story-index-right{
+  margin-top: 1.35rem;
+}
 .content-header{
   text-align: center;
   color: #3b3b3b;
@@ -269,7 +277,7 @@ button.off-canvas-toggle{
   font-size: .9rem;
 }
 .story-index-posted{
-  font-size: .55rem;
+  font-size: .7rem;
   color: #8a8a8a;
 }
 .story-index-ammount{
@@ -362,14 +370,19 @@ span.stripe{
 }
 .story {
   margin: 3rem 0;
-  
   p{
     color: #5e5e5e;
     font-size: .9rem;
+    margin-right: 3rem;
   }
   .comment-count{
     color: #525252;
     font-size: .7rem;
+    margin-right: 3rem;
+  }
+  .subheader{
+    color: #5e5e5e;
+    font-size: .9rem;
   }
   small{
     font-size: .7rem;
@@ -406,7 +419,7 @@ span.stripe{
   }
   .story-detail-right{
     margin-top: 3rem;
-    padding: 0 4rem;
+    padding: 0 2.6rem;
     p.subheader{
       font-size: .8rem;
     }
