--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
     <ul class="menu">
       <li data-no-turbolink><%= link_to 'Beranda', root_path, class: "#{active_class(root_path)}" %></li>
       <li><%= link_to 'Laporan', stories_path, class: "#{active_class(stories_path)}" %></li>
-      <li><%= link_to 'Buat Laporan', new_story_path, class: "#{active_class(new_story_path)}" %></li>
+      <li><%= link_to 'Laporkan !', new_story_path, class: "#{active_class(new_story_path)}", id: 'lapor' %></li>
       <% if current_user  %>
         <li class="border-left-grey"><%= link_to 'Settings', change_password_path  %></li>
         <li class="border-left-grey"><%= link_to 'Keluar', logout_path, method: :delete %></li>
