--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -2,11 +2,11 @@
   <div class="row">
     <div class="columns medium-6">
       <%= search_form_for @search do |f| %>
-        <%= f.search_field :title_or_content_or_category_name_or_location_city_name_or_location_province_name_cont %>
+        <%= f.search_field :title_or_content_or_category_name_or_location_city_name_or_location_province_name_cont, placeholder: 'Search' %>
       <% end %>
     </div>
 
-    <div class="columns medium-6 ">
+    <!-- <div class="columns medium-6 ">
       <div class="row">
         <div class="columns medium-6 ">
           <%= select_tag 'province',
@@ -17,7 +17,7 @@
             options_from_collection_for_select(Category.all, 'id', 'name'), prompt: "Kategori" %>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
